docs: Consolidate and organize documentation
- Created CHANGELOG.md consolidating all historical changes
- Organized documentation into docs/ directory
- Added docs/DEVELOPMENT.md with architecture and development guidelines
- Added docs/README.md with documentation guidelines for AI agents
- Moved REVIEW.md to docs/HISTORICAL_REVIEW.md for archival
- Deleted 8 redundant/outdated documentation files:
  * ACTION_PLAN.md
  * CHANGES_IMPLEMENTED.md
  * CHECKLIST.md
  * FIXES_SUMMARY.md
  * IMPLEMENTATION_SUMMARY.md
  * NEW_FEATURES.md
  * QUICK_TEST.md
  * test_fixes.sh
- Updated README.md to reference new documentation structure

Result: Clean, organized docs structure (2 files in root, 3 in docs/)
Prevents future documentation sprawl with clear guidelines

--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,19 @@ wheels/
 # Environment variables
 .env
 
-# Output files
-*.mp3
+# Output directory (organized by date and video title)
+output/
+
+# Old output files (if any remain)
 *_transcript.txt
 *_report.md
 *_report.pdf
+
+# Temporary files
+tmp*.mp3
+audio_*.mp3
+*.mp3
+
+# Log files
+*.log
+yt-transcribe.log
